--- a/src/FlexTemplate/Views/Shared/_Layout.cshtml
+++ b/src/FlexTemplate/Views/Shared/_Layout.cshtml
@@ -95,6 +95,14 @@
     <script type="text/javascript" src="~/js/customs.js"></script>
     <script type="text/javascript" src="~/js/ajax.js"></script>
     <script type="text/javascript" src="~/js/admin.js"></script>
+    <script src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.14.0/jquery.validate.min.js"
+            asp-fallback-src="~/lib/jquery-validation/dist/jquery.validate.min.js"
+            asp-fallback-test="window.jQuery && window.jQuery.validator">
+    </script>
+    <script src="https://ajax.aspnetcdn.com/ajax/jquery.validation.unobtrusive/3.2.6/jquery.validate.unobtrusive.min.js"
+            asp-fallback-src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"
+            asp-fallback-test="window.jQuery && window.jQuery.validator && window.jQuery.validator.unobtrusive">
+    </script>
 
     <script type="text/javascript" src="~/ckeditor/ckeditor.js"></script>
 
