[ADD] display photos, schedule

--- a/src/FlexTemplate/Views/Home/Components/ThisPlaceLocation/Default.cshtml
+++ b/src/FlexTemplate/Views/Home/Components/ThisPlaceLocation/Default.cshtml
@@ -3,7 +3,7 @@
     <div class="section-title-02">
         <h3><span>Location</span></h3>
     </div>
-
+    <!--<div id="map-simple" class="map-submit mb-40"></div>-->
     <div class="map-holder">
 
         <div id="hotel-detail-map" data-lat="50.309515" data-lon="30.695801" style="width: 100%; height: 480px;"></div>
