--- a/src/FlexTemplate/Views/Home/Error.cshtml
+++ b/src/FlexTemplate/Views/Home/Error.cshtml
@@ -296,7 +296,7 @@
 
                         <div class="footer-logo">
                             <a href="#home">
-                                <img src="images/logo-white.png" alt="Image" />
+                                <img src="~/images/logo-white.png" alt="Image" />
                             </a>
                         </div>
 
