--- a/src/FlexTemplate/Views/Shared/Components/Footer/Default.cshtml
+++ b/src/FlexTemplate/Views/Shared/Components/Footer/Default.cshtml
@@ -11,7 +11,7 @@
         <div class="col-xs-12 col-sm-12 col-md-3">
           <div class="footer-logo">
             <a href="#home">
-              <img src="images/logo-white.png" alt="Image" />
+              <img src="~/images/logo-white.png" alt="Image" />
             </a>
           </div>
           <p class="about-us-footer">Опис сайту в деталях...<a href="#" class="font-italic">читати далі</a></p>
