--- a/src/FlexTemplate/Views/Home/Components/ThisPlaceOverview/Default.cshtml
+++ b/src/FlexTemplate/Views/Home/Components/ThisPlaceOverview/Default.cshtml
@@ -1,4 +1,14 @@
 ﻿@model FlexTemplate.ViewModels.HomeController.ThisPlaceOverviewViewModel
+@{
+    bool hasSchedule = !(Model.Place.Schedule.MondayFrom == TimeSpan.Zero && Model.Place.Schedule.MondayTo == TimeSpan.Zero
+    && Model.Place.Schedule.TuesdayFrom == TimeSpan.Zero && Model.Place.Schedule.TuesdayTo == TimeSpan.Zero
+    && Model.Place.Schedule.WednesdayFrom == TimeSpan.Zero && Model.Place.Schedule.WednesdayTo == TimeSpan.Zero
+    && Model.Place.Schedule.ThurstdayFrom == TimeSpan.Zero && Model.Place.Schedule.ThurstdayTo == TimeSpan.Zero
+    && Model.Place.Schedule.FridayFrom == TimeSpan.Zero && Model.Place.Schedule.FridayTo == TimeSpan.Zero
+    && Model.Place.Schedule.SaturdayFrom == TimeSpan.Zero && Model.Place.Schedule.SaturdayTo == TimeSpan.Zero
+    && Model.Place.Schedule.SundayFrom == TimeSpan.Zero && Model.Place.Schedule.SundayTo == TimeSpan.Zero);
+}
+
 @if(Model != null)
 {
     <div class="detail-content-section clearfix">
@@ -13,7 +23,7 @@
 
     <div class="row">
 
-    <div class="col-xs-12 col-sm-6 mb-20">
+    <div class="col-xs-12 @(hasSchedule ? "col-sm-6" : "col-sm-12") mb-20">
 
         <div class="contact-box">
 
@@ -65,7 +75,7 @@
         </div>
 
     </div>
-    @if (@Model.Place.Schedule != null)
+    @if (hasSchedule)
     {
         <div class="col-xs-12 col-sm-6">
 
@@ -86,9 +96,18 @@
                             </div>
 
                             <div class="col-xs-6 col-sm-6">
-                                <span class="time">
+                                @if (Model.Place.Schedule.MondayFrom == TimeSpan.Zero && Model.Place.Schedule.MondayTo == TimeSpan.Zero)
+                                {
+                                    <span class="time text-uppercase font700 spacing-2">
+                                    вихідний
+                                    </span>
+                                }
+                                else
+                                {
+                                    <span class="time text-uppercase font700 spacing-2">
                                     @Model.Place.Schedule.MondayFrom.ToString("hh\\:mm") - @Model.Place.Schedule.MondayTo.ToString("hh\\:mm")
-                                </span>
+                                    </span>
+                                }
                             </div>
 
                         </div>
@@ -106,9 +125,18 @@
                             </div>
 
                             <div class="col-xs-6 col-sm-6">
-                                <span class="time">
-                                    @Model.Place.Schedule.TuesdayFrom.ToString("hh\\:mm") - @Model.Place.Schedule.TuesdayTo.ToString("hh\\:mm")
-                                </span>
+                                @if (Model.Place.Schedule.TuesdayFrom == TimeSpan.Zero && Model.Place.Schedule.TuesdayTo == TimeSpan.Zero)
+                                {
+                                    <span class="time text-uppercase font700 spacing-2">
+                                        вихідний
+                                    </span>
+                                }
+                                else
+                                {
+                                    <span class="time text-uppercase font700 spacing-2">
+                                        @Model.Place.Schedule.TuesdayFrom.ToString("hh\\:mm") - @Model.Place.Schedule.TuesdayTo.ToString("hh\\:mm")
+                                    </span>
+                                }
                             </div>
 
                         </div>
@@ -126,9 +154,18 @@
                             </div>
 
                             <div class="col-xs-6 col-sm-6">
-                                <span class="time">
-                                    @Model.Place.Schedule.WednesdayFrom.ToString("hh\\:mm") - @Model.Place.Schedule.WednesdayTo.ToString("hh\\:mm")
-                                </span>
+                                @if (Model.Place.Schedule.WednesdayFrom == TimeSpan.Zero && Model.Place.Schedule.WednesdayTo == TimeSpan.Zero)
+                                {
+                                    <span class="time text-uppercase font700 spacing-2">
+                                        вихідний
+                                    </span>
+                                }
+                                else
+                                {
+                                    <span class="time text-uppercase font700 spacing-2">
+                                        @Model.Place.Schedule.WednesdayFrom.ToString("hh\\:mm") - @Model.Place.Schedule.WednesdayTo.ToString("hh\\:mm")
+                                    </span>
+                                }
                             </div>
 
                         </div>
@@ -146,9 +183,18 @@
                             </div>
 
                             <div class="col-xs-6 col-sm-6">
-                                <span class="time">
-                                    @Model.Place.Schedule.ThurstdayFrom.ToString("hh\\:mm") - @Model.Place.Schedule.ThurstdayTo.ToString("hh\\:mm")
-                                </span>
+                                @if (Model.Place.Schedule.ThurstdayFrom == TimeSpan.Zero && Model.Place.Schedule.ThurstdayTo == TimeSpan.Zero)
+                                {
+                                    <span class="time text-uppercase font700 spacing-2">
+                                        вихідний
+                                    </span>
+                                }
+                                else
+                                {
+                                    <span class="time text-uppercase font700 spacing-2">
+                                        @Model.Place.Schedule.ThurstdayFrom.ToString("hh\\:mm") - @Model.Place.Schedule.ThurstdayTo.ToString("hh\\:mm")
+                                    </span>
+                                }
                             </div>
 
                         </div>
@@ -166,9 +212,18 @@
                             </div>
 
                             <div class="col-xs-6 col-sm-6">
-                                <span class="time">
-                                    @Model.Place.Schedule.FridayFrom.ToString("hh\\:mm") - @Model.Place.Schedule.FridayTo.ToString("hh\\:mm")
-                                </span>
+                                @if (Model.Place.Schedule.FridayFrom == TimeSpan.Zero && Model.Place.Schedule.FridayTo == TimeSpan.Zero)
+                                {
+                                    <span class="time text-uppercase font700 spacing-2">
+                                        вихідний
+                                    </span>
+                                }
+                                else
+                                {
+                                    <span class="time text-uppercase font700 spacing-2">
+                                        @Model.Place.Schedule.FridayFrom.ToString("hh\\:mm") - @Model.Place.Schedule.FridayTo.ToString("hh\\:mm")
+                                    </span>
+                                }
                             </div>
 
                         </div>
@@ -186,9 +241,18 @@
                             </div>
 
                             <div class="col-xs-6 col-sm-6">
-                                <span class="time">
-                                    @Model.Place.Schedule.SaturdayFrom.ToString("hh\\:mm") - @Model.Place.Schedule.SaturdayTo.ToString("hh\\:mm")
-                                </span>
+                                @if (Model.Place.Schedule.SaturdayFrom == TimeSpan.Zero && Model.Place.Schedule.SaturdayTo == TimeSpan.Zero)
+                                {
+                                    <span class="time text-uppercase font700 spacing-2">
+                                        вихідний
+                                    </span>
+                                }
+                                else
+                                {
+                                    <span class="time text-uppercase font700 spacing-2">
+                                        @Model.Place.Schedule.SaturdayFrom.ToString("hh\\:mm") - @Model.Place.Schedule.SaturdayTo.ToString("hh\\:mm")
+                                    </span>
+                                }
                             </div>
 
                         </div>
@@ -206,9 +270,18 @@
                             </div>
 
                             <div class="col-xs-6 col-sm-6">
-                                <span class="time text-uppercase font700 spacing-2">
-                                    @Model.Place.Schedule.SundayFrom.ToString("hh\\:mm") - @Model.Place.Schedule.SundayTo.ToString("hh\\:mm")
-                                </span>
+                                @if (Model.Place.Schedule.SundayFrom == TimeSpan.Zero && Model.Place.Schedule.SundayTo == TimeSpan.Zero)
+                                {
+                                    <span class="time text-uppercase font700 spacing-2">
+                                        вихідний
+                                    </span>
+                                }
+                                else
+                                {
+                                    <span class="time text-uppercase font700 spacing-2">
+                                        @Model.Place.Schedule.SundayFrom.ToString("hh\\:mm") - @Model.Place.Schedule.SundayTo.ToString("hh\\:mm")
+                                    </span>
+                                }
                             </div>
 
                         </div>
