--- a/src/FlexTemplate/Views/Shared/Components/Header/Transparent.cshtml
+++ b/src/FlexTemplate/Views/Shared/Components/Header/Transparent.cshtml
@@ -4,9 +4,9 @@
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="header-inner">
             <div class="navbar-header">
-                <a class="navbar-brand hidden-xs off-sticky" href="index.html"><img src="images/logo-white.png" alt="Image" /></a>
-                <a class="navbar-brand hidden-xs on-sticky" href="index.html"><img src="images/logo.png" alt="Image" /></a>
-                <a class="navbar-brand visible-xs" href="index.html"><img src="images/logo-white-xs.png" alt="Image" /></a>
+                <a class="navbar-brand hidden-xs off-sticky" href="index.html"><img src="~/images/logo-white.png" alt="Image" /></a>
+                <a class="navbar-brand hidden-xs on-sticky" href="index.html"><img src="~/images/logo.png" alt="Image" /></a>
+                <a class="navbar-brand visible-xs" href="index.html"><img src="~/images/logo-white-xs.png" alt="Image" /></a>
             </div>
             <div id="navbar" class="collapse navbar-collapse navbar-arrow pull-left">
                 <ul class="nav navbar-nav" id="responsive-menu">
