[FIX] fixed links

--- a/src/FlexTemplate/Views/Home/Error.cshtml
+++ b/src/FlexTemplate/Views/Home/Error.cshtml
@@ -10,8 +10,8 @@
             <div class="header-inner">
 
                 <div class="navbar-header">
-                    <a class="navbar-brand hidden-xs" href="index.html"><img src="images/logo.png" alt="Image" /></a>
-                    <a class="navbar-brand visible-xs" href="index.html"><img src="images/logo-xs.png" alt="Image" /></a>
+                    <a class="navbar-brand hidden-xs" asp-controller="Home" asp-action="Index"><img src="../../images/logo.png" alt="Image" /></a>
+                    <a class="navbar-brand visible-xs" asp-controller="Home" asp-action="Index"><img src="../../images/logo-xs.png" alt="Image" /></a>
                 </div>
 
                 <div id="navbar" class="collapse navbar-collapse navbar-arrow pull-left">
