--- a/src/FlexTemplate/Views/Shared/Components/Header/Solid.cshtml
+++ b/src/FlexTemplate/Views/Shared/Components/Header/Solid.cshtml
@@ -5,19 +5,19 @@
         <div class="header-inner navbar-default navbar-sticky">
             <div class="container">
                 <div class="navbar-header">
-                    <a class="navbar-brand hidden-xs" href="@Url.Action("Index", "Home")"><img src="images/logo.png" alt="Image" /></a>
-                    <a class="navbar-brand visible-xs" href="@Url.Action("Index", "Home")"><img src="images/logo-xs.png" alt="Image" /></a>
+                    <a class="navbar-brand hidden-xs" asp-controller="Home" asp-action="Index"><img src="../../images/logo.png" alt="Image" /></a>
+                    <a class="navbar-brand visible-xs" asp-controller="Home" asp-action="Index"><img src="../../images/logo-xs.png" alt="Image" /></a>
                 </div>
                 <div id="navbar" class="collapse navbar-collapse navbar-arrow pull-left">
                     <ul class="nav navbar-nav" id="responsive-menu">
-                        <li><a href="@Url.Action("Index", "Home")">Головна</a></li>
-                        <li><a href="@Url.Action("Places", "Home")">Ресторани</a></li>
-                        <li><a href="@Url.Action("NewPlace", "Home")">Додати ресторан</a></li>
+                        <li><a asp-controller="Home" asp-action="Index">Головна</a></li>
+                        <li><a asp-controller="Home" asp-action="Places">Ресторани</a></li>
+                        <li><a asp-controller="Home" asp-action="NewPlace">Додати ресторан</a></li>
                         <li>
                             <a>Увійти(Тест)</a>
                             <ul style="display: none">
-                                <li><a href="@Url.Action("LoginAsAdmin", "Login")">Як адміністратор</a></li>
-                                <li><a href="@Url.Action("LoginAsGuest", "Login")">Як користувач</a></li>
+                                <li><a asp-controller="Login" asp-action="LoginAsAdmin">Як адміністратор</a></li>
+                                <li><a asp-controller="Login" asp-action="LoginAsGuest">Як користувач</a></li>
                             </ul>
                         </li>
                     </ul>
