--- a/src/FlexTemplate/Views/Home/NewPlace.cshtml
+++ b/src/FlexTemplate/Views/Home/NewPlace.cshtml
@@ -379,7 +379,7 @@
                                     <div class="image-upload">
                                         <div class="dropzone food-menu-image">
                                             <input name="file" type="file">
-                                            <input type="hidden" name="Menus[0].Product[0].Guid" value="@Guid.NewGuid()"/>
+                                            <input type="hidden" name="Menus[0].Products[0].Guid" value="@Guid.NewGuid()"/>
                                             <div class="dz-default dz-message"><span>Click or Drop<br />Images Here<br /><small class="font-italic text-muted font400 mt-5 block">2MB max file</small></span></div>
                                         </div>
                                     </div>
