--- a/src/FlexTemplate/Views/Home/Place.cshtml
+++ b/src/FlexTemplate/Views/Home/Place.cshtml
@@ -185,7 +185,7 @@
 
         </div>
 
-        @await  Component.InvokeAsync("YouMayAlsoLike")
+        @await  Component.InvokeAsync("YouMayAlsoLike", new { item = Model.Place })
 
     </div>
 
