--- a/src/FlexTemplate/Views/Home/Components/YouMayAlsoLike/Default.cshtml
+++ b/src/FlexTemplate/Views/Home/Components/YouMayAlsoLike/Default.cshtml
@@ -1,105 +1,55 @@
-﻿<div class="row mt-30">
+﻿@model FlexTemplate.ViewModels.HomeController.YouMayAlsoLikeViewModel
+@if (Model != null)
+{
+    <div class="row mt-30">
 
-    <div class="col-md-12">
+        <div class="col-md-12">
 
-        <div class="section-title-02">
+            <div class="section-title-02">
 
-            <h3><span>Вам також може сподобатися:</span></h3>
+                <h3><span>Вам також може сподобатися:</span></h3>
+
+            </div>
 
         </div>
 
     </div>
 
-</div>
+    <div class="GridLex-gap-30">
 
-<div class="GridLex-gap-30">
-
-    <div class="GridLex-grid-noGutter-equalHeight">
-
-        <div class="GridLex-col-3_sm-4_xs-6_xss-12">
-            <div class="restaurant-grid-item">
-                <a href="#">
-                    <div class="image">
-                        <img src="../../images/restaurant/01.jpg" alt="Image" />
-                    </div>
-                    <div class="content">
-                        <h5>The Smokin' Pug</h5>
-                        <p class="location"><i class="fa fa-map-marker"></i> 88 Thanon Surawong, Si Phraya, Bang Rak </p>
-                        <div class="rating-wrapper">
-                            <div class="rating-item">
-                                <input type="hidden" class="rating" data-filled="oi oi-star" data-empty="oi oi-star" data-fractions="2" data-readonly value="3.5" />
+        <div class="GridLex-grid-noGutter-equalHeight">
+            @foreach (FlexTemplate.Entities.Place place in Model.Places)
+            {
+                <div class="GridLex-col-3_sm-4_xs-6_xss-12">
+                    <div class="restaurant-grid-item">
+                        <a href="#">
+                            <div class="image">
+                                <img src="../../Resources/Places/@(place.Id)/head.jpg" onerror="this.onerror = null; this.src = '../../Resources/Defaults/place.jpg';" alt="Image" />
                             </div>
-                            <span class="texting"> (27 відгуків)</span>
-                        </div>
-                        <p class="cuisine">Кухня: <span>Iталійська</span> <span>Морепродукти</span> <span>Бістро</span></p>
-                    </div>
-                </a>
-            </div>
-        </div>
-
-        <div class="GridLex-col-3_sm-4_xs-6_xss-12">
-            <div class="restaurant-grid-item">
-                <a href="#">
-                    <div class="image">
-                        <img src="../../images/restaurant/02.jpg" alt="Image" />
-                    </div>
-                    <div class="content">
-                        <h5>J'AIME by Jean-Michel Lorain</h5>
-                        <p class="location"><i class="fa fa-map-marker"></i> 105 Soi Sathon 1, Thung Maha Mek, Sathon</p>
-                        <div class="rating-wrapper">
-                            <div class="rating-item">
-                                <input type="hidden" class="rating" data-filled="oi oi-star" data-empty="oi oi-star" data-fractions="2" data-readonly value="3.5" />
+                            <div class="content">
+                                <h5>@place.Name</h5>
+                                <p class="location">
+                                    <i class="fa fa-map-marker"></i> @place.Address @place.Street.Name, @place.Street.City.Name
+                                </p>
+                                <div class="rating-wrapper">
+                                    <div class="rating-item">
+                                        <input type="hidden" class="rating" data-filled="oi oi-star" data-empty="oi oi-star" data-fractions="2" data-readonly value="@(place.Reviews != null && place.Reviews.Any() ? place.Reviews.Average(r => r.Star) : 0)" />
+                                    </div>
+                                    <span class="texting"> (@(place.Reviews?.Count() ?? 0) відгуків)</span>
+                                </div>
+                                <p class="cuisine">
+                                    Кухня:
+                                    @foreach (FlexTemplate.Entities.PlaceCategory category in place.PlaceCategories)
+                                    {
+                                        <span>@category.Category.Name</span>
+                                    }
+                                </p>
                             </div>
-                            <span class="texting"> (27 відгуків)</span>
-                        </div>
-                        <p class="cuisine">Кухня: <span>Iталійська</span> <span>Морепродукти</span> <span>Бістро</span></p>
+                        </a>
                     </div>
-                </a>
-            </div>
-        </div>
-
-        <div class="GridLex-col-3_sm-4_xs-6_xss-12">
-            <div class="restaurant-grid-item">
-                <a href="#">
-                    <div class="image">
-                        <img src="../../images/restaurant/03.jpg" alt="Image" />
-                    </div>
-                    <div class="content">
-                        <h5>DID - Dine in the Dark </h5>
-                        <p class="location"><i class="fa fa-map-marker"></i> 250 Sukhumvit Rd, Bangkok</p>
-                        <div class="rating-wrapper">
-                            <div class="rating-item">
-                                <input type="hidden" class="rating" data-filled="oi oi-star" data-empty="oi oi-star" data-fractions="2" data-readonly value="3.5" />
-                            </div>
-                            <span class="texting"> (27 відгуків)</span>
-                        </div>
-                        <p class="cuisine">Кухня: <span>Iталійська</span> <span>Морепродукти</span> <span>Бістро</span></p>
-                    </div>
-                </a>
-            </div>
-        </div>
-
-        <div class="GridLex-col-3_sm-4_xs-6_xss-12">
-            <div class="restaurant-grid-item">
-                <a href="#">
-                    <div class="image">
-                        <img src="../../images/restaurant/04.jpg" alt="Image" />
-                    </div>
-                    <div class="content">
-                        <h5>JP French Restaurant </h5>
-                        <p class="location"><i class="fa fa-map-marker"></i> 59/1 sukhumvit soi 31(soi sawadee), Bangkok</p>
-                        <div class="rating-wrapper">
-                            <div class="rating-item">
-                                <input type="hidden" class="rating" data-filled="oi oi-star" data-empty="oi oi-star" data-fractions="2" data-readonly value="3.5" />
-                            </div>
-                            <span class="texting"> (27 відгуків)</span>
-                        </div>
-                        <p class="cuisine">Кухня: <span>Iталійська</span> <span>Морепродукти</span> <span>Бістро</span></p>
-                    </div>
-                </a>
-            </div>
+                </div>
+            }
         </div>
 
     </div>
-
-</div>
+}
