[ADD] Contacts on place page

--- a/src/FlexTemplate/Views/Home/Components/ThisPlaceOverview/Default.cshtml
+++ b/src/FlexTemplate/Views/Home/Components/ThisPlaceOverview/Default.cshtml
@@ -40,7 +40,7 @@
                     </div>
 
                     <div class="content">
-                        <p>324 Yarang Road, T.Chabangtigo, <br/>Muanng Pattani 9400 </p>
+                        <p>@Model.Place.Street.Name @Model.Place.Address,<br/>@Model.Place.Street.City.Name</p>
                     </div>
 
                 </li>
@@ -52,7 +52,7 @@
                     </div>
 
                     <div class="content">
-                        <p>+66 28 878 5452 <br/>+66 2 547 2223</p>
+                        <p>@Model.Place.Phone <br /> <br /></p>
                     </div>
 
                 </li>
@@ -64,7 +64,7 @@
                     </div>
 
                     <div class="content">
-                        <p>support@youremail.com<br/>information@youremail.com</p>
+                        <p>@Model.Place.Email<br /> <br /></p>
                     </div>
 
                 </li>
