[ADD] map marker support

--- a/src/FlexTemplate/Views/Home/Components/ThisPlaceMenu/Default.cshtml
+++ b/src/FlexTemplate/Views/Home/Components/ThisPlaceMenu/Default.cshtml
@@ -32,7 +32,7 @@
                                         <div class="food-menu-item clearfix">
 
                                             <div class="image">
-                                                <img src="../../Resources/Products/@product.Id" onerror="this.onerror = null; this.src = '../../Resources/Defaults/product.jpg';" alt="image"/>
+                                                <img src="../../Resources/Products/@(product.Id).jpg" onerror="this.onerror = null; this.src = '../../Resources/Defaults/product.jpg';" alt="image"/>
                                             </div>
 
                                             <div class="content">
