--- a/src/FlexTemplate/Views/Home/Components/ThisPlaceReview/Default.cshtml
+++ b/src/FlexTemplate/Views/Home/Components/ThisPlaceReview/Default.cshtml
@@ -5,7 +5,7 @@
 
         <div class="image">
 
-            <img src="images/man/01.jpg" alt="images" />
+            <img src="../../Resources/User/@(Model.Review.User.Id).jpg" onerror="this.onerror = null; this.src = '../../Resources/Defaults/user.jpg';" alt="images" />
 
         </div>
 
