--- a/src/FlexTemplate/Views/Home/NewPlace.cshtml
+++ b/src/FlexTemplate/Views/Home/NewPlace.cshtml
@@ -104,6 +104,8 @@
                             </div>
                             <h6 class="text-primary text-uppercase mt-15">Карта</h6>
                             <div id="map-simple" class="map-submit mb-40"></div>
+                            <input id="lat-hidden" type="hidden" name="Latitude" />
+                            <input id="lng-hidden" type="hidden" name="Longitude" />
                             <h6 class="text-primary text-uppercase mt-15">Opening Hours</h6>
                             <div class="opening-hours-wrapper">
 
