--- a/src/FlexTemplate/Views/Home/Components/ThisPlaceLocation/Default.cshtml
+++ b/src/FlexTemplate/Views/Home/Components/ThisPlaceLocation/Default.cshtml
@@ -1,12 +1,13 @@
-﻿<div id="detail-content-sticky-nav-04" class="detail-content-section clearfix">
+﻿@model FlexTemplate.Entities.Place
+<div id="detail-content-sticky-nav-04" class="detail-content-section clearfix">
 
     <div class="section-title-02">
         <h3><span>Location</span></h3>
     </div>
-    <div id="map-simple" class="map-submit mb-40"></div>
-    <!--<div class="map-holder">
+    <!--<div id="map-simple" data-lon="@Model.Longitude.ToString("0.00", System.Globalization.CultureInfo.InvariantCulture)" data-lat="@Model.Latitude.ToString("0.00", System.Globalization.CultureInfo.InvariantCulture)"class="map-submit mb-40"></div>-->
+    <div class="map-holder">
 
-        <div id="hotel-detail-map" data-lat="50.309515" data-lon="30.695801" style="width: 100%; height: 480px;"></div>
+        <div id="hotel-detail-map" data-lat="@Model.Latitude.ToString("0.00", System.Globalization.CultureInfo.InvariantCulture)" data-lon="@Model.Longitude.ToString("0.00", System.Globalization.CultureInfo.InvariantCulture)" style="width: 100%; height: 480px;"></div>
 
         <div class="infobox-wrapper">
             <div id="infobox">
@@ -19,6 +20,6 @@
             </div>
         </div>
 
-    </div>-->
+    </div>
 
 </div>
