[ADD] Добавление блока на BlogsFeed

--- a/src/FlexTemplate/Views/Home/Blogs.cshtml
+++ b/src/FlexTemplate/Views/Home/Blogs.cshtml
@@ -121,6 +121,8 @@
 
                 </div>
 
+                @await Component.InvokeAsync("BlogsFeed", new { item = Model.Blogs });
+
             </div>
 
         </div>
