--- a/src/FlexTemplate/Views/Home/Blog.cshtml
+++ b/src/FlexTemplate/Views/Home/Blog.cshtml
@@ -146,8 +146,7 @@
 
                
 
-                @await Component.InvokeAsync("BlogsFeed", new { item = Model.Blog })
-                
+                @await Component.InvokeAsync("BlogsFeed", new { item = Model.Blog });
                 </div>
 
             </div>
