--- a/src/FlexTemplate/Views/Home/Components/BlogsFeed/Default.cshtml
+++ b/src/FlexTemplate/Views/Home/Components/BlogsFeed/Default.cshtml
@@ -1,4 +1,6 @@
-﻿@model FlexTemplate.ViewModels.HomeController.BlogsFeedViewModel
+﻿@using System.Linq
+@using FlexTemplate.Entities
+@model FlexTemplate.ViewModels.HomeController.BlogsFeedViewModel
 <div class="col-sm-4 col-md-3 col-xs-12">
 
     <aside class="sidebar-wrapper for-blog">
@@ -112,62 +114,23 @@
         <div class="sidebar-module clearfix">
 
             <ul class="sidebar-post">
+                @foreach (Blog blog in Model.Blogs)
+                {
+
                     <li class="clearfix">
                         <a href="blog-single.html">
                             <div class="image">
                                 <img src="images/blog/01-sm.jpg" alt="Popular Post" />
                             </div>
                             <div class="content">
-                                <h6>@Model.Blog.Caption</h6>
-                                <p class="recent-post-sm-meta"><i class="fa fa-comments mr-5"></i>@Model.Blog.Comments.Count()</p>
+                                <h6>@blog.Caption</h6>
+                                <p class="recent-post-sm-meta"><i class="fa fa-comments mr-5"></i>@blog.Comments.Count()</p>
                             </div>
                         </a>
                     </li>
-                <li class="clearfix">
-                    <a href="blog-single.html">
-                        <div class="image">
-                            <img src="images/blog/01-sm.jpg" alt="Popular Post" />
-                        </div>
-                        <div class="content">
-                            <h6>@Model.Blog.Caption</h6>
-                            <p class="recent-post-sm-meta"><i class="fa fa-comments mr-5"></i>@Model.Blog.Comments.Count()</p>
-                        </div>
-                    </a>
-                </li>
-                <li class="clearfix">
-                    <a href="blog-single.html">
-                        <div class="image">
-                            <img src="images/blog/01-sm.jpg" alt="Popular Post" />
-                        </div>
-                        <div class="content">
-                            <h6>@Model.Blog.Caption</h6>
-                            <p class="recent-post-sm-meta"><i class="fa fa-comments mr-5"></i>@Model.Blog.Comments.Count()</p>
-                        </div>
-                    </a>
-                </li>
-                <li class="clearfix">
-                    <a href="blog-single.html">
-                        <div class="image">
-                            <img src="images/blog/01-sm.jpg" alt="Popular Post" />
-                        </div>
-                        <div class="content">
-                            <h6>@Model.Blog.Caption</h6>
-                            <p class="recent-post-sm-meta"><i class="fa fa-comments mr-5"></i>@Model.Blog.Comments.Count()</p>
-                        </div>
-                    </a>
-                </li>
-                <li class="clearfix">
-                    <a href="blog-single.html">
-                        <div class="image">
-                            <img src="images/blog/01-sm.jpg" alt="Popular Post" />
-                        </div>
-                        <div class="content">
-                            <h6>@Model.Blog.Caption</h6>
-                            <p class="recent-post-sm-meta"><i class="fa fa-comments mr-5"></i>@Model.Blog.Comments.Count()</p>
-                        </div>
-                    </a>
-                </li>
-
+                }
+                    
+               
             </ul>
 
 
