[ADD] remove photo

--- a/src/FlexTemplate/Views/Components/Components/NewPlaceMenu/Default.cshtml
+++ b/src/FlexTemplate/Views/Components/Components/NewPlaceMenu/Default.cshtml
@@ -18,7 +18,7 @@
 
         <div class="image-upload">
             <div class="dropzone food-menu-image">
-                <input id="file_descriptor" type="hidden" name="Menus[@Model.Position].Products[0].Guid" value="@Guid.NewGuid()"/>
+                <input class="file_descriptor" type="hidden" name="Menus[@Model.Position].Products[0].Guid" value="@Guid.NewGuid()"/>
                 <input name="file" type="file">
                 <div class="dz-default dz-message"><span>Click or Drop<br />Images Here<br /><small class="font-italic text-muted font400 mt-5 block">2MB max file</small></span></div>
             </div>
