--- a/src/FlexTemplate/Views/Components/Components/NewPlaceProduct/Default.cshtml
+++ b/src/FlexTemplate/Views/Components/Components/NewPlaceProduct/Default.cshtml
@@ -9,7 +9,7 @@
     <div class="image-upload">
         <div class="dropzone food-menu-image">
             <input name="file" type="file">
-            <input id="file_descriptor" type="hidden" name="Menus[@Model.Menu].Products[@Model.Position].Guid" value="@Guid.NewGuid().ToString()"/>
+            <input class="file_descriptor" type="hidden" name="Menus[@Model.Menu].Products[@Model.Position].Guid" value="@Guid.NewGuid().ToString()"/>
             <div class="dz-default dz-message"><span>Click or Drop<br />Images Here<br /><small class="font-italic text-muted font400 mt-5 block">2MB max file</small></span></div>
         </div>
     </div>
