--- a/src/FlexTemplate/Views/Home/Components/ThisPlaceHeader/Default.cshtml
+++ b/src/FlexTemplate/Views/Home/Components/ThisPlaceHeader/Default.cshtml
@@ -1,7 +1,7 @@
 ﻿@model FlexTemplate.ViewModels.HomeController.ThisPlaceHeaderViewModel
 <!-- start hero-header -->
 <div class="c-this-place-header">
-    <input id="file_descriptor" type="hidden" value="@Model.Place.Id" />
+    <input class="file_descriptor" type="hidden" value="@Model.Place.Id" />
     <div id="head-update" class="dropzone">
         <input type="file">
         <div class="dz-default dz-message"><span>Змінити головну фотографію закладу</span></div>
