--- a/src/FlexTemplate/Views/Home/EditPlace.cshtml
+++ b/src/FlexTemplate/Views/Home/EditPlace.cshtml
@@ -333,82 +333,85 @@
 
                         </div>
 
-                        <div class="submite-list-box">
+                            <div class="submite-list-box">
 
-                            <div class="food-menu-form-wrapper">
+                                <div class="food-menu-form-wrapper">
+                                    @for (var i = 0; i < Model.Menus.Count(); i++)
+                                    {
+                                        <h6 class="text-primary text-uppercase">Menu Category #@(i+1)</h6>
 
-                                <h6 class="text-primary text-uppercase">Menu Category #1</h6>
+                                        <div class="form-group form-group-lg">
 
-                                <div class="form-group form-group-lg">
-
-                                    <input type="text" name="Menus[0].Name" class="form-control" placeholder="Ex: Breakfast" />
-
-                                </div>
-
-                                <div class="food-menu-form-box clearfix">
-
-                                    <div class="icon">
-                                        <i class="fa fa-cutlery text-primary"></i>
-                                        <span class="number-label">1</span>
-                                    </div>
-
-                                    <div class="image-upload">
-                                        <div class="dropzone food-menu-image">
-                                            <input name="file" type="file">
-                                            <input type="hidden" name="Menus[0].Products[0].Guid" value="@Guid.NewGuid()"/>
-                                            <div class="dz-default dz-message"><span>Click or Drop<br />Images Here<br /><small class="font-italic text-muted font400 mt-5 block">2MB max file</small></span></div>
-                                        </div>
-                                    </div>
-
-                                    <div class="food-memu-form">
-
-                                        <div class="row gap-20">
-
-                                            <div class="col-xss-12 col-xs-12 col-sm-9">
-
-                                                <div class="form-group">
-                                                    <label>Title</label>
-                                                    <input type="text" name="Menus[0].Products[0].Name" class="form-control" />
-                                                </div>
-
-                                            </div>
-
-                                            <div class="col-xss-12 col-xs-12 col-sm-3">
-
-                                                <div class="form-group">
-                                                    <label>Price</label>
-                                                    <div class="input-group">
-                                                        <input type="text" class="form-control" name="Menus[0].Products[0].Price">
-                                                        <span class="input-group-addon">$</span>
-                                                    </div>
-                                                </div>
-
-                                            </div>
-
-                                            <div class="col-xss-12 col-xs-12 col-sm-12">
-
-                                                <div class="form-group">
-                                                    <label>Short Description</label>
-                                                    <input type="text" name="Menus[0].Products[0].Description" class="form-control" />
-                                                </div>
-
-                                            </div>
+                                            <input type="text" name="Menus[i].Name" class="form-control" value="@Model.Menus[i]"/>
 
                                         </div>
+                                        for (var j = 0; i < Model.Menus[i].Products.Count(); j++)
+                                        {
+                                             <div class="food-menu-form-box clearfix">
 
+                                                 <div class="icon">
+                                                     <i class="fa fa-cutlery text-primary"></i>
+                                                     <span class="number-label">1</span>
+                                                 </div>
+
+                                                 <div class="image-upload">
+                                                     <div class="dropzone food-menu-image">
+                                                         <input name="file" type="file">
+                                                         <input type="hidden" name="Menus[@i].Products[@j].Guid" value="@Model.Menus[i].Products[i].Id"/>
+                                                         <div class="dz-default dz-message"><span>Click or Drop<br />Images Here<br /><small class="font-italic text-muted font400 mt-5 block">2MB max file</small></span></div>
+                                                     </div>
+                                                 </div>
+
+                                                 <div class="food-memu-form">
+
+                                                     <div class="row gap-20">
+
+                                                         <div class="col-xss-12 col-xs-12 col-sm-9">
+
+                                                             <div class="form-group">
+                                                                 <label>Title</label>
+                                                                 <input type="text" name="Menus[@i].Products[@j].Name" class="form-control" value="@Model.Menus[i].Products[i].Title"/>
+                                                             </div>
+
+                                                         </div>
+
+                                                         <div class="col-xss-12 col-xs-12 col-sm-3">
+
+                                                             <div class="form-group">
+                                                                 <label>Price</label>
+                                                                 <div class="input-group">
+                                                                     <input type="text" class="form-control" name="Menus[@i].Products[@j].Price" value="@Model.Menus[i].Products[i].Price">
+                                                                     <span class="input-group-addon">$</span>
+                                                                 </div>
+                                                             </div>
+
+                                                         </div>
+
+                                                         <div class="col-xss-12 col-xs-12 col-sm-12">
+
+                                                             <div class="form-group">
+                                                                 <label>Short Description</label>
+                                                                 <input type="text" name="Menus[@i].Products[@j].Description" class="form-control" value="@Model.Menus[i].Products[i].Description"/>
+                                                             </div>
+
+                                                         </div>
+
+                                                     </div>
+
+                                                 </div>
+
+                                             </div>
+                                         }
+                                    }
+                                    <div class="clearfix mt-15">
+                                        <a id="add-product" menu-position="0"><i class="fa fa-plus-circle" aria-hidden="true"></i></a>
+                                        <a id="remove-product" menu-position="0"><i class="fa fa-minus-circle" aria-hidden="true"></i></a>
+                                        <span class="ml-5 font13 line-12 text-muted font-italic">You can add upto 10 menus</span>
                                     </div>
 
-                                </div>
-
-                                <div class="clearfix mt-15">
-                                    <a id="add-product" menu-position="0"><i class="fa fa-plus-circle" aria-hidden="true"></i></a>
-                                    <a id="remove-product" menu-position="0"><i class="fa fa-minus-circle" aria-hidden="true"></i></a>
-                                    <span class="ml-5 font13 line-12 text-muted font-italic">You can add upto 10 menus</span>
                                 </div>
 
                             </div>
-
-                        </div>
 
                         <div class="text-center">
                             <h6 class="text-primary text-uppercase mb-0"><a id="add-menu" menu-position="0"><i class="fa fa-plus font14"></i> Add more menu category</a></h6>
@@ -427,7 +430,7 @@
                         <div class="submite-list-box">
                             <div id="new-place" class="dropzone">
                                 <input name="files" type="file" multiple>
-                                <input id="file_descriptor" type="hidden" name="uid" value="@Guid.NewGuid().ToString()" />
+                                <input class="file_descriptor" type="hidden" name="uid" value="@Guid.NewGuid().ToString()" />
                                 <div class="dz-default dz-message"><span>Натисніть або перетяніть сюди зображення</span></div>
                             </div>
                         </div>
