--- a/src/FlexTemplate/Views/Home/Blogs.cshtml
+++ b/src/FlexTemplate/Views/Home/Blogs.cshtml
@@ -69,7 +69,7 @@
 
                                         <div class="content">
 
-                                            <h4><a href="#">@blog.Caption</a></h4>
+                                            <h4><a asp-controller="Home" asp-action="Blog" asp-route-id="@blog.Id">@blog.Caption</a></h4>
                                             <p class="recent-post-entry">@blog.Preamble</p>
 
                                             <a href="#" class="btn btn-primary btn-inverse btn-sm">Read more <i class="fa fa-long-arrow-right"></i></a>
