--- a/src/FlexTemplate/Views/Home/Blogs.cshtml
+++ b/src/FlexTemplate/Views/Home/Blogs.cshtml
@@ -121,7 +121,7 @@
 
                 </div>
 
-               @*@ @await Component.InvokeAsync("BlogsFeed", new { item = Model.Blogs })*@
+                @await Component.InvokeAsync("BlogsFeed", new { exceptBlogs = Model.Blogs })
 
                 </div>
 
