--- a/src/FlexTemplate/Views/Home/Components/ThisPlaceHeader/Default.cshtml
+++ b/src/FlexTemplate/Views/Home/Components/ThisPlaceHeader/Default.cshtml
@@ -30,7 +30,7 @@
                             <div class="text-right text-left-xs">
                                 <a href="#" class="fav-like"><i class="fa fa-heart"></i></a>
                                 <div class="btn-holder mt-5">
-                                    <a asp-controller="Home" asp-action="EditPlace" asp-route-id="@Model.Place.Id" class="btn btn-primary anchor-alt">Редагувати заклад</a>
+                                    <a asp-controller="Home" asp-action="EditPlace" asp-route-id="@Model.Place.Id" class="btn btn-primary anchor-alt">Правити заклад</a>
                                 </div>
                             </div>
                         </div>
