--- a/src/FlexTemplate/Views/Home/Components/ThisPlacesList/List.cshtml
+++ b/src/FlexTemplate/Views/Home/Components/ThisPlacesList/List.cshtml
@@ -1,50 +1,6 @@
 ﻿@using System.Linq
 @using FlexTemplate.Entities
 @model FlexTemplate.ViewModels.HomeController.ThisPlacesListViewModel
-<div class="col-sm-8 col-md-9">
-
-    <div class="sort-by-wrapper clearfix">
-
-        <div class="row gap-5">
-
-            <div class="col-sm-10">
-
-                <div class="text-holder bg-primary">Порядок:</div>
-                <ul class="sort-by">
-                    <li>
-                        <button class="btn active">Пропозиція<i class="ti-angle-up"></i></button>
-                    </li>
-                    <li>
-                        <button class="btn">Назва</button>
-                    </li>
-                    <li>
-                        <button class="btn">Рейтинг</button>
-                    </li>
-                    <li>
-                        <button class="btn">Цiна</button>
-                    </li>
-                    <li>
-                        <button class="btn">Кухня</button>
-                    </li>
-                    <li>
-                        <button class="btn">Місто</button>
-                    </li>
-                </ul>
-
-            </div>
-
-            <div class="col-sm-2">
-
-                <ul class="layout-option">
-                    <li><a href="restuarant-result-grid.html"><i class="ti-view-grid"></i></a></li>
-                    <li class="active"><a href="restuarant-result-list.html"><i class="ti-view-list-alt"></i></a></li>
-                </ul>
-
-            </div>
-
-        </div>
-
-    </div>
 
     <div class="restaurant-list-item-wrapper no-last-bb">
         @foreach (Place place in Model.Places)
@@ -55,7 +11,7 @@
 
                     <div class="GridLex-col-3_sm-3_xss-12">
                         <div class="image">
-                            <img src="../../Resources/Places/@place.Id/head.jpg" alt="Image" />
+                            <img src="../../Resources/Places/@place.Id/head.jpg" alt="Image" onerror="this.onerror = null; this.src = '../../Resources/Defaults/place.jpg';"/>
                         </div>
                     </div>
 
@@ -110,29 +66,25 @@
     </div>
 
     <div class="pagination-wrapper">
-
+        <input id="currentPage" type="hidden" name="currentPage" value="" />
         <div class="GridLex-grid-middle GridLex-grid-noGutter">
             <div class="GridLex-col-6_sm-12_xs-12">
-                <div class="text-right text-center-sm mb-10-sm">Показано з 1 по 24 з 253 ресторанів</div>
             </div>
             <div class="GridLex-col-6_sm-12_xs-12">
                 <nav>
-                    <ul class="pagination pagination-text-center-sm mb-5-xs">
-                        <li>
-                            <a href="#" aria-label="Previous">
-                                <span aria-hidden="true">&laquo;</span>
-                            </a>
-                        </li>
-                        <li class="active"><a href="#">1</a></li>
-                        <li><a href="#">2</a></li>
-                        <li><a href="#">3</a></li>
-                        <li><a href="#">4</a></li>
-                        <li><a href="#">5</a></li>
-                        <li>
-                            <a href="#" aria-label="Next">
-                                <span aria-hidden="true">&raquo;</span>
-                            </a>
-                        </li>
+                    <ul class="places-pagination pagination pagination-text-center-sm mb-5-xs">
+                        @if (Model.CurrentPage > 1)
+                        {
+                            <li><a data-id="@(Model.CurrentPage - 1)" aria-label="Previous"><span aria-hidden="true">&laquo;</span></a></li>
+                        }
+                        @for (var i = 1; i <= Model.Pages; i++)
+                        {
+                            <li class="@(Model.CurrentPage == i ? "active" : string.Empty)"><a data-id="@i">@i</a></li>
+                        }
+                        @if (Model.CurrentPage < Model.Pages)
+                        {
+                            <li><a data-id="@(Model.CurrentPage + 1)" aria-label="Next"><span aria-hidden="true">&raquo;</span></a></li>
+                        }
                     </ul>
                 </nav>
 
@@ -140,5 +92,3 @@
         </div>
 
     </div>
-
-</div>
