--- a/src/FlexTemplate/Views/Home/Components/ThisPlacesList/Grid.cshtml
+++ b/src/FlexTemplate/Views/Home/Components/ThisPlacesList/Grid.cshtml
@@ -50,6 +50,7 @@
         <input id="currentPage" type="hidden" name="currentPage" value="" />
         <div class="GridLex-grid-middle GridLex-grid-noGutter">
             <div class="GridLex-col-6_sm-12_xs-12">
+                <div class="text-right text-center-sm mb-10-sm">Showing 1 to 24 from 253 restaurants </div>
             </div>
             <div class="GridLex-col-6_sm-12_xs-12">
                 <nav>
