--- a/src/FlexTemplate/Views/Home/Components/ThisPlacesList/List.cshtml
+++ b/src/FlexTemplate/Views/Home/Components/ThisPlacesList/List.cshtml
@@ -69,6 +69,7 @@
         <input id="currentPage" type="hidden" name="currentPage" value="" />
         <div class="GridLex-grid-middle GridLex-grid-noGutter">
             <div class="GridLex-col-6_sm-12_xs-12">
+                <div class="text-right text-center-sm mb-10-sm">Показано з 1 по 24 з 253 ресторанів </div>
             </div>
             <div class="GridLex-col-6_sm-12_xs-12">
                 <nav>
