[ADD] Валидация текстовых полей с классом "numeric"

--- a/src/FlexTemplate/Views/Components/Components/NewPlaceMenu/Default.cshtml
+++ b/src/FlexTemplate/Views/Components/Components/NewPlaceMenu/Default.cshtml
@@ -42,7 +42,7 @@
                     <div class="form-group">
                         <label>Price</label>
                         <div class="input-group">
-                            <input type="text" class="form-control" name="Menus[@Model.Position].Products[0].Price">
+                            <input type="text" class="form-control numeric" name="Menus[@Model.Position].Products[0].Price">
                             <span class="input-group-addon">$</span>
                         </div>
                     </div>
