--- a/src/FlexTemplate/Views/Home/NewPlace.cshtml
+++ b/src/FlexTemplate/Views/Home/NewPlace.cshtml
@@ -92,7 +92,7 @@
                                 <div class="col-xss-12 col-xs-6 col-sm-4">
                                     <div class="form-group">
                                         <label>Email</label>
-                                        <input type="email" class="form-control required" name="email" />
+                                        <input type="email" class="form-control" name="email" />
                                     </div>
                                 </div>
                                 <div class="col-xss-12 col-xs-6 col-sm-4">
@@ -378,7 +378,7 @@
                                                 <div class="form-group">
                                                     <label>Price</label>
                                                     <div class="input-group">
-                                                        <input type="text" class="form-control" name="Menus[0].Products[0].Price">
+                                                        <input type="text" class="form-control numeric" name="Menus[0].Products[0].Price">
                                                         <span class="input-group-addon">$</span>
                                                     </div>
                                                 </div>
