--- a/src/FlexTemplate/Views/Components/Components/NewPlaceProduct/Default.cshtml
+++ b/src/FlexTemplate/Views/Components/Components/NewPlaceProduct/Default.cshtml
@@ -32,7 +32,7 @@
                 <div class="form-group">
                     <label>Price</label>
                     <div class="input-group">
-                        <input type="text" class="form-control" name="Menus[@Model.Menu].Products[@Model.Position].Price">
+                        <input type="text" class="form-control numeric" name="Menus[@Model.Menu].Products[@Model.Position].Price">
                         <span class="input-group-addon">$</span>
                     </div>
                 </div>
