--- a/src/FlexTemplate/Views/Home/EditPlace.cshtml
+++ b/src/FlexTemplate/Views/Home/EditPlace.cshtml
@@ -93,7 +93,7 @@
                                 <div class="col-xss-12 col-xs-6 col-sm-4">
                                     <div class="form-group">
                                         <label>Email</label>
-                                        <input type="email" class="form-control required" name="email" value="@Model.Email" />
+                                        <input type="email" class="form-control" name="email" value="@Model.Email" />
                                     </div>
                                 </div>
                                 <div class="col-xss-12 col-xs-6 col-sm-4">
@@ -446,7 +446,7 @@
                                                         <div class="form-group">
                                                             <label>Price</label>
                                                             <div class="input-group">
-                                                                <input type="text" class="form-control" name="Menus[@i].Products[@j].Price" value="@Model.Menus[i].Products[j].Price">
+                                                                <input type="text" class="form-control numeric" name="Menus[@i].Products[@j].Price" value="@Model.Menus[i].Products[j].Price">
                                                                 <span class="input-group-addon">$</span>
                                                             </div>
                                                         </div>
